# epha-ots

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug_stuff.h  log.h  server.c  storage.h
assets/: client.css  client.html  client.js  client.min.js  qrcode.js  qrcode.min.js
tools/: minify.sh
